--- a/app/src/components/styles/Home.css
+++ b/app/src/components/styles/Home.css
@@ -1,99 +1,4 @@
-.home-container {
-  display: flex;
-  width: 100%;
-  background-color: #111927;
-  background-image: 
-    radial-gradient(at 47% 33%, hsl(162, 77%, 40%) 0, transparent 59%), 
-    radial-gradient(at 82% 65%, hsl(218, 39%, 11%) 0, transparent 55%);
-  color: #fff;
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-}
-
-.home-content {
-  width: 100%; /* Ensure the content takes full width */
-  height: 100%; /* Ensure the content takes full height */
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-}
-
-.content-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  text-align: center;
-  background: rgba(255, 255, 255, 0.1);
-  padding: 2rem;
-  border-radius: 0.5rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* Center content vertically */
-  align-items: center; /* Center content horizontally */
-}
-
-.header {
-  margin-bottom: 2rem;
-}
-
-.display-4 {
-  font-size: 2.5rem;
-  font-weight: 700;
-  color: #007bff;
-  margin-bottom: 1rem;
-}
-
-.lead {
-  font-size: 1.2rem;
-  color: #ddd;
-  margin-bottom: 2rem;
-}
-
-/* Glassmorphism card effect */
-.card {
-  flex: 1 1 30%;
-  margin: 1rem;
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(2, 3, 10, 0.75);
-  border-radius: 12px;
-  border: 1px solid rgba(255, 255, 255, 0.125);
-  transition: transform 0.3s ease;
-}
-
-.card:hover {
-  transform: translateY(-5px);
-}
-
-.card-body {
-  padding: 1.5rem;
-}
-
-.card-title {
-  font-size: 1.4rem;
-  font-weight: 600;
-  color: #fff;
-  margin-bottom: 1rem;
-}
-
-.card-text {
-  font-size: 1rem;
-  color: #ddd;
-}
-
-.btn-primary {
-  background-color: #007bff;
-  border: none;
-  padding: 0.75rem 1.5rem;
-  font-size: 1rem;
-  border-radius: 0.5rem;
-  transition: background-color 0.3s ease;
-}
-
-.btn-primary:hover {
-  background-color: #0056b3;
-}
-
-.mt-3 {
-  margin-top: 1.5rem;
+.apexcharts-menu.apexcharts-menu-open{
+  background: darkblue;
+  color: #fff
 }
