--- a/app/src/App.css
+++ b/app/src/App.css
@@ -7,6 +7,7 @@
     "navbar navbar"
     "sidebar main-content";
   height: 100vh;
+  overflow: auto;
 }
 
 .navbar {
@@ -41,6 +42,7 @@
   align-items: center;
   overflow-y: auto;
   padding: 0;
+  
   
 }
 
